site logo section compleated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme="cupcake">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.mini.css" />
     <title>PH Tube</title>
-</head>
-<body>
-    <h2>PH tube</h2>
-</body>
+    <link
+      rel="shortcut icon"
+      href="./images/PH Tube fave icon.svg"
+      type="image/x-icon"
+    />
+  </head>
+  <body class="font-fontInter">
+    <!-- some defult class container w-screen px-14 pt-12 -->
+    <header class="w-screen md:px-14 px-5 pt-12">
+      <div class="navbar bg-base-100">
+        <!-- PH tube Icon -->
+        <div class="navbar-start">
+          <img src="./images/Logo.png" alt="PH Tube Logo" />
+        </div>
+
+        <div class="navbar-center">
+          <a class="btn  normal-case text-lg
+          font-medium rounded bg-svbBgColor
+         text-svbFontColor px-5 hover:bg-svbBgColor
+          ">Sort by view</a>
+        </div>
+
+        <div class="navbar-end">
+          <button class="btn  normal-case text-lg
+          font-medium rounded bg-primaryBtnBg
+         text-whaitColor px-5 hover:bg-primaryBtnBg
+         ">Blog</button>
+        </div>
+
+      </div>
+      <!-- navecation menu -->
+      <nav>
+
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
