nave bar compleated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.mini.css" />
@@ -18,8 +18,8 @@
     />
   </head>
   <body class="font-fontInter">
-    <!-- some defult class container w-screen px-14 pt-12 -->
-    <header class="w-screen md:px-14 px-5 pt-12">
+    <!-- some defult class w-screen lg:px-14 px-5 mt-12 -->
+    <header class="w-screen lg:px-14 px-5 mt-12">
       <div class="navbar bg-base-100">
         <!-- PH tube Icon -->
         <div class="navbar-start">
@@ -27,26 +27,77 @@
         </div>
 
         <div class="navbar-center">
-          <a class="btn  normal-case text-lg
-          font-medium rounded bg-svbBgColor
-         text-svbFontColor px-5 hover:bg-svbBgColor
-          ">Sort by view</a>
+          <a
+            class="btn normal-case text-lg font-medium rounded bg-svbBgColor text-svbFontColor px-5 hover:bg-svbBgColor"
+            >Sort by view</a
+          >
         </div>
 
         <div class="navbar-end">
-          <button class="btn  normal-case text-lg
-          font-medium rounded bg-primaryBtnBg
-         text-whaitColor px-5 hover:bg-primaryBtnBg
-         ">Blog</button>
+          <button
+            class="btn normal-case text-lg font-medium rounded bg-primaryBtnBg text-whaitColor px-5 hover:bg-primaryBtnBg"
+          >
+            Blog
+          </button>
         </div>
-
       </div>
       <!-- navecation menu -->
-      <nav>
-
+      <nav class="mt-8 border-t border-borderColor">
+        <ul class="flex justify-center items-center gap-6 pt-10">
+          <!-- .btnActive {
+                    bg-primaryBtnBg text-whaitColor
+                    font-semibold hover:bg-primaryBtnBg;
+                } 
+               .normalBtn {
+                   font-medium bg-btnBg
+                   text-btnFontColor px-5 hover:bg-btnBg;
+                }-->
+          <!-- active for btnActive and defult for normalBtn -->
+          <li class="btn text-lg capitalize rounded btnActive">
+            <a href="#">Test</a>
+          </li>
+          <li class="btn text-lg capitalize rounded normalBtn">
+            <a href="#">Test</a>
+          </li>
+          <li class="btn text-lg capitalize rounded normalBtn">
+            <a href="#">Test</a>
+          </li>
+          <li class="btn text-lg capitalize rounded normalBtn">
+            <a href="#">Test</a>
+          </li>
+        </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="w-screen lg:px-14 px-5 mt-12">
+      <!-- tube video section -->
+      <section class="grid grid-cols-4 pt-10">
+        <div class="card w-96 bg-base-100 shadow-xl">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1642726197634-2a21f764220a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHlvdXR1YmUlMjBpY29ufGVufDB8fDB8fHww&w=1000&q=80"
+              alt="Shoes"
+            />
+          </figure>
+          <div class="mt-5">
+
+            <div class="flex items-center gap-3">
+              <div class="avatar">
+                <div class="w-10 h-10 rounded-full">
+                  <img
+                    src="https://png.pngtree.com/png-vector/20191101/ourmid/pngtree-businessman-avatar-icon-flat-style-png-image_1917273.jpg"
+                  />
+                </div>
+              </div>
+              <h2 class="card-title">Shoes!</h2>
+            </div>
+            <p>If a dog chews shoes whose shoes does he choose?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
