catagare waize post show

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- navecation menu -->
       <nav class="mt-8 border-t border-borderColor">
         <ul
-        id="naveContainer"
+          id="naveContainer"
           class="justify-center items-center sm:flex-row flex-col gap-6 pt-10 hidden"
         >
           <!-- .btnActive {
@@ -74,8 +74,8 @@
     <main id="postContainer" class="lg:mx-14 mx-5 mt-12">
       <!-- tube video section -->
       <section
-        class="grid lg:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-6 pt-10">
-
+        class="grid lg:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-6 pt-10"
+      >
         <!-- item-->
         <!-- <div class="card">
           <figure class="rounded-lg h-56 relative border border-borderColor">
@@ -114,8 +114,7 @@
           </div>
         </div> -->
 
-
-          <!-- grid colom 1 -->
+        <!-- grid colom 1 -->
         <!-- <div class="flex flex-col items-center justify-center gap-8 mt-14">
           <img src="./images/Icon.png" alt="Empty Icon">
           <h2 class="text-noDataFont font-bold text-titleFontColor text-center">
@@ -123,14 +122,11 @@
             <br> content here
           </h2>
         </div> -->
-        
-
       </section>
     </main>
     <footer></footer>
 
     <script src="./js/categories.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/catagori-items.js"></script>
   </body>
 </html>
