short bade all is done

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
         <div class="navbar-center">
           <a
-            class="btn normal-case text-lg font-medium rounded bg-svbBgColor text-svbFontColor px-5 hover:bg-svbBgColor"
+            class="btn normal-case text-lg font-medium rounded bg-svbBgColor text-svbFontColor px-5 hover:bg-svbBgColor" id="sortByViewBtn"
             >Sort by view</a
           >
         </div>
 
         <div class="navbar-end">
-          <button
+          <a href="./blog/"
             class="btn normal-case text-lg font-medium rounded bg-primaryBtnBg text-whaitColor px-5 hover:bg-primaryBtnBg"
           >
             Blog
-          </button>
+          </a>
         </div>
       </div>
       <!-- navecation menu -->
