--- a/index.html
+++ b/index.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.mini.css" />
     <title>PH Tube</title>
-    <link
-      rel="shortcut icon"
-      href="./images/PH Tube fave icon.svg"
-      type="image/x-icon"
-    />
-  </head>
-  <body class="font-fontInter">
+    <link rel="shortcut icon" href="./images/PH Tube fave icon.svg" type="image/x-icon" />
+</head>
+
+<body class="font-fontInter">
     <!-- some defult class lg:px-14 px-5 mt-12 -->
     <header class="lg:mx-14 mx-5 mt-12">
-      <div class="justify-center items-start my-6 sm:hidden flex">
-        <img src="./images/Logo.png" alt="PH Tube Logo" />
-      </div>
-
-      <div class="navbar sm:justify-center justify-around bg-base-100">
-        <!-- PH tube Icon -->
-        <div class="navbar-start sm:flex hidden">
-          <img src="./images/Logo.png" alt="PH Tube Logo" />
+        <div class="justify-center items-start my-6 sm:hidden flex">
+            <img src="./images/Logo.png" alt="PH Tube Logo" />
         </div>
 
-        <div class="navbar-center">
-          <a
-            class="btn normal-case text-lg font-medium rounded bg-svbBgColor text-svbFontColor px-5 hover:bg-svbBgColor" id="sortByViewBtn"
-            >Sort by view</a
-          >
-        </div>
+        <div class="navbar sm:justify-center justify-around bg-base-100">
+            <!-- PH tube Icon -->
+            <div class="navbar-start sm:flex hidden">
+                <img src="./images/Logo.png" alt="PH Tube Logo" />
+            </div>
 
-        <div class="navbar-end">
-          <a href="./blog/"
-            class="btn normal-case text-lg font-medium rounded bg-primaryBtnBg text-whaitColor px-5 hover:bg-primaryBtnBg"
-          >
-            Blog
-          </a>
+            <div class="navbar-center">
+                <a class="btn normal-case text-lg font-medium rounded bg-svbBgColor text-svbFontColor px-5 hover:bg-svbBgColor" id="sortByViewBtn">Sort by view</a>
+            </div>
+
+            <div class="navbar-end">
+                <a href="./blog/" class="btn normal-case text-lg font-medium rounded bg-primaryBtnBg text-whaitColor px-5 hover:bg-primaryBtnBg">
+                    Blog
+                </a>
+            </div>
         </div>
-      </div>
-      <!-- navecation menu -->
-      <nav class="mt-8 border-t border-borderColor">
-        <ul
-          id="naveContainer"
-          class="justify-center items-center sm:flex-row flex-col gap-6 pt-10 hidden"
-        >
-          <!-- .btnActive {
+        <!-- navecation menu -->
+        <nav class="mt-8 border-t border-borderColor">
+            <ul id="naveContainer" class="justify-center items-center sm:flex-row flex-col gap-6 pt-10 hidden">
+                <!-- .btnActive {
                     bg-primaryBtnBg text-whaitColor
                     font-semibold hover:bg-primaryBtnBg;
                 } 
@@ -64,20 +51,18 @@
                 }
               
               -->
-          <!-- active for btnActive and defult for normalBtn -->
-          <!-- <li class="btn btnCustom btnActive">
+                <!-- active for btnActive and defult for normalBtn -->
+                <!-- <li class="btn btnCustom btnActive">
             <a href="#">Test</a>
           </li> -->
-        </ul>
-      </nav>
+            </ul>
+        </nav>
     </header>
     <main id="postContainer" class="lg:mx-14 mx-5 mt-12">
-      <!-- tube video section -->
-      <section
-        class="grid lg:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-6 pt-10"
-      >
-        <!-- item-->
-        <!-- <div class="card">
+        <!-- tube video section -->
+        <section class="grid lg:grid-cols-4 sm:grid-cols-2 grid-cols-1 gap-6 pt-10">
+            <!-- item-->
+            <!-- <div class="card">
           <figure class="rounded-lg h-56 relative border border-borderColor">
             <img
               class="object-cover"
@@ -114,19 +99,20 @@
           </div>
         </div> -->
 
-        <!-- grid colom 1 -->
-        <!-- <div class="flex flex-col items-center justify-center gap-8 mt-14">
+            <!-- grid colom 1 -->
+            <!-- <div class="flex flex-col items-center justify-center gap-8 mt-14">
           <img src="./images/Icon.png" alt="Empty Icon">
           <h2 class="text-noDataFont font-bold text-titleFontColor text-center">
             Oops!! Sorry, There is no
             <br> content here
           </h2>
         </div> -->
-      </section>
+        </section>
     </main>
     <footer></footer>
 
     <script src="./js/categories.js"></script>
     <script src="./js/main.js"></script>
-  </body>
+</body>
+
 </html>
