code some change and quersiton ans my lenguages and understand

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!-- some defult class lg:px-14 px-5 mt-12 -->
     <header class="lg:mx-14 mx-5 mt-12">
         <div class="justify-center items-start my-6 sm:hidden flex">
-            <img src="./images/Logo.png" alt="PH Tube Logo" />
+            <a href="./index.html"><img src="./images/Logo.png" alt="PH Tube Logo" /></a>
         </div>
 
         <div class="navbar sm:justify-center justify-around bg-base-100">
             <!-- PH tube Icon -->
             <div class="navbar-start sm:flex hidden">
-                <img src="./images/Logo.png" alt="PH Tube Logo" />
+                <a href="./index.html"><img src="./images/Logo.png" alt="PH Tube Logo" /></a>
             </div>
 
             <div class="navbar-center">
